crates/parser/tests/snapshots/fixture_test__hello.snap
---
source: crates/parser/tests/fixture_test.rs
expression: module
---
decls:
  - DefFn:
      name: main
      visibility: Private
      type_params: []
      params: []
      constraints: []
      return_type: ~
      body:
        Lit:
          value:
            Int: 42
          span:
            - 26
            - 28
      span:
        - 13
        - 28
