crates/parser/tests/snapshots/fixture_test__intrinsic_panic.snap
---
source: crates/parser/tests/fixture_test.rs
expression: module
---
decls:
  - DefFn:
      name: main
      visibility: Private
      type_params: []
      params: []
      constraints: []
      return_type: ~
      body:
        If:
          cond:
            Lit:
              value:
                Bool: true
              span:
                - 29
                - 33
          then_:
            Lit:
              value:
                Int: 42
              span:
                - 34
                - 40
          else_:
            App:
              func:
                Var:
                  name: panic
                  span:
                    - 48
                    - 53
              args:
                - Lit:
                    value:
                      String: oops
                    span:
                      - 54
                      - 60
              span:
                - 46
                - 63
          span:
            - 26
            - 63
      span:
        - 13
        - 63
