crates/parser/tests/snapshots/fixture_test__intrinsic_println.snap
---
source: crates/parser/tests/fixture_test.rs
expression: module
---
decls:
  - ExternJava:
      class_name: krypton.runtime.KryptonIO
      methods:
        - name: println
          param_types:
            - Named:
                name: Object
                span:
                  - 66
                  - 72
          return_type:
            Named:
              name: Unit
              span:
                - 77
                - 81
          span:
            - 54
            - 81
      span:
        - 13
        - 83
  - DefFn:
      name: main
      visibility: Private
      params: []
      constraints: []
      return_type: ~
      body:
        App:
          func:
            Var:
              name: println
              span:
                - 98
                - 105
          args:
            - Lit:
                value:
                  String: hello
                span:
                  - 106
                  - 113
          span:
            - 98
            - 114
      span:
        - 85
        - 114
