crates/parser/tests/snapshots/fixture_test__list_literal_basic.snap
---
source: crates/parser/tests/fixture_test.rs
expression: module
---
decls:
  - DefFn:
      name: main
      visibility: Private
      type_params: []
      params: []
      constraints: []
      return_type: ~
      body:
        Match:
          scrutinee:
            App:
              func:
                Var:
                  name: Cons
                  span:
                    - 32
                    - 36
              args:
                - Lit:
                    value:
                      Int: 1
                    span:
                      - 37
                      - 38
                - App:
                    func:
                      Var:
                        name: Cons
                        span:
                          - 40
                          - 44
                    args:
                      - Lit:
                          value:
                            Int: 2
                          span:
                            - 45
                            - 46
                      - App:
                          func:
                            Var:
                              name: Cons
                              span:
                                - 48
                                - 52
                          args:
                            - Lit:
                                value:
                                  Int: 3
                                span:
                                  - 53
                                  - 54
                            - Var:
                                name: Nil
                                span:
                                  - 56
                                  - 59
                          span:
                            - 48
                            - 60
                    span:
                      - 40
                      - 61
              span:
                - 32
                - 62
          arms:
            - pattern:
                Constructor:
                  name: Cons
                  args:
                    - Var:
                        name: h
                        span:
                          - 74
                          - 75
                    - Var:
                        name: _
                        span:
                          - 77
                          - 78
                  span:
                    - 69
                    - 79
              guard: ~
              body:
                Var:
                  name: h
                  span:
                    - 83
                    - 84
              span:
                - 69
                - 84
            - pattern:
                Constructor:
                  name: Nil
                  args: []
                  span:
                    - 90
                    - 93
              guard: ~
              body:
                Lit:
                  value:
                    Int: 0
                  span:
                    - 97
                    - 98
              span:
                - 90
                - 98
          span:
            - 26
            - 101
      span:
        - 13
        - 101
