crates/parser/tests/snapshots/fixture_test__list_literal_empty.snap
---
source: crates/parser/tests/fixture_test.rs
expression: module
---
decls:
  - DefFn:
      name: main
      visibility: Private
      type_params: []
      params: []
      constraints: []
      return_type: ~
      body:
        Match:
          scrutinee:
            Var:
              name: Nil
              span:
                - 32
                - 35
          arms:
            - pattern:
                Constructor:
                  name: Cons
                  args:
                    - Var:
                        name: _
                        span:
                          - 47
                          - 48
                    - Var:
                        name: _
                        span:
                          - 50
                          - 51
                  span:
                    - 42
                    - 52
              guard: ~
              body:
                Lit:
                  value:
                    Int: 1
                  span:
                    - 56
                    - 57
              span:
                - 42
                - 57
            - pattern:
                Constructor:
                  name: Nil
                  args: []
                  span:
                    - 63
                    - 66
              guard: ~
              body:
                Lit:
                  value:
                    Int: 0
                  span:
                    - 70
                    - 71
              span:
                - 63
                - 71
          span:
            - 26
            - 74
      span:
        - 13
        - 74
